# retinaface_ncnn

./: README.md  install-ncnn-gpu.sh  retinaface.py  retinaface_ncc_cppVspython.ipynb  retinaface_nccn_cppVspython.ipynb
cpp/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  main_executable.cpp
python/: facedetection_ncnn.py  retinaface.py
